# graphtoys

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  linmath.h  main.c  main.ini  mandelbrot.c  mandelbrot.h  mandelbrot_fs.fs  mandelbrot_vs.vert  mandelbrot_vs.vs  mandelbulb.c  mandelbulb.h  mandelbulb_fs.frag  mandelbulb_fs.fs  mandelbulb_vs.vs  mesh.c  mesh.h  object.h  program.c  program.h  rcc.c  ref.c  torus.c  torus.h  torus_vertex_shader.vert  triangle.c  triangle.h  triangle_fragment_shader.frag  triangle_vertex_shader.vert  triangle_vk.c
.github/workflows/: c-cpp.yml
font/: font.c  font.frag  font.h  font.vert  font_fs.frag  font_fs.fs  font_vs.vert  font_vs.vs
glad/: gl.h
lib/: astc_unpack.cpp  camera.c  camera.h  config.c  config.h  event.h  glloader.c  linmath.h  object.c  object.h  ref.h  tga.h  time.c  time.h  verify.h
lib/formats/: base64.c  base64.h  gltf.c  gltf.h  stl.c  stl.h
models/: asp_fft.c  base.frag  base.vert  dot.frag  dot.vert  gltf.c  mandelbrot.c  mandelbrot.frag  mandelbrot.h  mandelbulb.c  mandelbulb.frag  mandelbulb.h  mandelbulb.vert  mandelbulb_vs.vert  particles.c  particles.comp  particles.h  particles.vert  particles2.c  particles2.frag  particles2.h  particles2.vert  particles3.c  particles3.frag  particles3.h  particles3.ini  particles3.vert  particles3_comp_base.h  particles3_comp_set.h  particles3_count16.comp  particles3_cubes16.comp  particles3_isc.ini  particles3_mass.comp  particles3_mass16_64.comp  particles3_mass_sum.comp  particles3_move.comp  particles3_offsets16.comp  particles3_parts.comp  particles3_pm.comp  particles3_poisson.comp  (+20 more)
opengl/: buffer.c  buffer.h  pipeline.c  program.c  program.h  render.c
render/: buffer.c  buffer.h  camera.c  camera.h  char.h  pipeline.c  pipeline.h  program.c  program.h  render.c  render.h  shader.h
test/: base64.c  config.c  config1.ini  gltf.c
tools/: cfgprint.c  gltfprint.c  ktx2tga.c  ktx2tga.cpp  rcc.c  stlprint.c
vulkan/: buffer.c  buffer.h  char.c  commandbuffer.c  commandbuffer.h  device.c  device.h  drawcommandbuffer.c  drawcommandbuffer.h  frame.c  frame.h  loader.c  pipeline.c  render.c  render_impl.h  renderpass.c  renderpass.h  rendertarget.c  rendertarget.h  stats.c  stats.h  swapchain.c  swapchain.h  symbols.h  tools.c  tools.h  vk.h
